@@ -1,5 +1,6 @@
 Changes for 1.8.2
 
+ - [ZBX-1753] added permission check for trigger sound notifications (Aly)
  - [ZBX-1357] added Ukrainian translation; thanks to zalex_ua (Richlv)
  - [ZBX-2013] fixed error in trigger test screen (Vedmak)
  - [ZBX-2087] fixed permission scheme in actions (Aly)
